# project-euler

./: .gitignore  ProjectEuler.csproj  ProjectEuler.sln  README.md  puzzles.cabal  run.ps1
104/: 104.hs
11/: 11.rb
12/: 12.hs
13/: 13.rb
14/: 14.hs
17/: Program.cs
19/: 19.hs
20/: 20.hs
23/: 23.hs
243/: incomplete.hs
25/: 25.rb
26/: 26.txt
27/: 27.hs
28/: 28.txt  draft.rb
29/: 29.hs
30/: 30.hs
31/: 31.hs
32/: 32.hs
33/: 33.hs
34/: 34.hs
35/: main.hs
36/: 36.hs
37/: 37.hs
38/: 38.hs
39/: 39.hs
40/: 40.hs
41/: 41.rb  41_slow.rb
43/: 43.hs
44/: 44.hs
45/: 45.rb
47/: 47.hs
48/: Main.java
49/: 49.hs
504/: 504.hs
51/: 51.rb
52/: 52.rb
53/: 53.hs
57/: 57.hs
58/: 58.rb
59/: 59.hs
60/: 60.hs
61/: 61.hs
62/: 62_slow.rb  62_too_slow.rb
63/: 63.hs
69/: 69.md  attempts.hs
70/: 70.hs
700/: draft.rb
71/: 71.hs
719/: 719.hs
72/: 72.hs
73/: 73.hs
74/: 74.hs
76/: 76.hs
77/: 77.hs
80/: 80.rb
82/: 82.rb
83/: 83.rb
85/: 85.hs
91/: 91.hs
92/: 92.hs
93/: 93.hs
97/: 97.rb
98/: 98.hs
Properties/: AssemblyInfo.cs
adventofcode2023/: 02.py  03.py  04.py  06.hs  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  20.py  21.py  22.py  23.py  24.py  25.py  Coordinates.py  Graphs.py  Helpers.py  python_ref.md
adventofcode2024/: 01.hs  02.hs  Common.hs  Solution.hs
aoc/: Runner.hs  runner.py
common/: Coordinates.py  Graphs.py  Helpers.py  Poker.py
euler/: Runner.hs
euler/P100/: Solution.hs
euler/P104/: Solution.hs
euler/P12/: Solution.hs
euler/P14/: Solution.hs
euler/P16/: solution.rb
euler/P18/: solution.txt
euler/P19/: Solution.hs
euler/P20/: Solution.hs
euler/P22/: solution.rb
euler/P23/: Solution.hs
euler/P27/: Solution.hs
euler/P29/: Solution.hs
euler/P30/: Solution.hs
euler/P31/: Solution.hs
euler/P32/: Solution.hs
euler/P33/: Solution.hs
(+100 files in other folders)
